Configuração de mensageria com kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,31 @@
-
-# === SERVER CONFIG ===
-server.port=8080
-spring.application.name=beneficios-api
-
-# === H2 DATABASE CONFIG ===
-spring.datasource.url=jdbc:h2:mem:benefitsdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.initialization-mode=always
-
-# H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# === JPA / HIBERNATE ===
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-# === JWT CONFIG ===
-jwt.secret=MinhaChaveSecretaTop123
-jwt.expiration=3600000  # 1 hora em ms
-
-# === LOGGING CONFIG ===
-logging.level.root=INFO
-logging.level.org.springframework=INFO
-logging.level.com.seuprojeto=DEBUG
-
+#
+## === SERVER CONFIG ===
+#server.port=8080
+#spring.application.name=beneficios-api
+#
+## === H2 DATABASE CONFIG ===
+#spring.datasource.url=jdbc:h2:mem:benefitsdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.initialization-mode=always
+#
+## H2 console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+## === JPA / HIBERNATE ===
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#
+## === JWT CONFIG ===
+#jwt.secret=MinhaChaveSecretaTop123
+#jwt.expiration=3600000  # 1 hora em ms
+#
+## === LOGGING CONFIG ===
+#logging.level.root=INFO
+#logging.level.org.springframework=INFO
+#logging.level.com.seuprojeto=DEBUG
+#
